# aspy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.vhs  LEARNING_PATH.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  claude.sh  demo.tape  format.sh  launch-claude.bat  launch-claude.ps1  record-demo.sh  rustfmt.toml
.claude/: .gitignore  ARCHITECTURE.md  DEVELOPMENT_PHILOSOPHY.md  EXTENSIONS_VISION.md  PROJECT_STATUS.md  README.md  TONE_GUIDE.md  github-issue-report.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/context-recovery/: advanced-strategies.md
.claude/impl-plans/: agent-context-recovery-poc.md  api-translation-guide.md  event-pipeline-and-storage.md  event-pipeline-checklist.md  file-logging.md
.github/workflows/: ci.yml  release.yml
agents/: recover.md  summarize.md
commands/: context.md  events.md  lifestats.md  pre-compact.md  search-prompts.md  search-responses.md  search-thinking.md  search.md  stats.md  summarize.md  tempcontext.md  window.md
data/: lifestats.db
docs/: _config.yml  api-reference.md  architecture.md  azure-workbook-template.json  blog.md  cli-reference.md  commands.md  features.md  getting-started.md  index.md  log-analysis.md  otel-guide.md  rfc-event-pipeline.md  semantic-search-guide.md  serve.sh  sessions.md  themes.md  transformers.md  views.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2025-12-01-welcome-to-anthropic-spy.md  2025-12-01-welcome-to-aspy.md  2025-12-02-the-spy-always-knows.md  2025-12-03-remembering-what-claude-forgot.md  2025-12-05-speaking-in-tongues.md  2025-12-06-identity-crisis.md  2025-12-08-v0.2.0-the-layers-come-together.md  2025-12-12-v0.2.0-the-layers-come-together.md
docs/assets/css/: style.scss
hooks/: hooks.json
hooks/spy/: README.md  cargo-fmt.sh  pre-compact.js  session-end.sh  session-start.js  session-start.sh  user-prompt.js
mcp-server/: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
mcp-server/src/client/: api.ts
mcp-server/src/tools/: lifetime.ts  memory.ts  session.ts
mcp-server/src/types/: api.ts
mcp-server/src/utils/: format.ts  identity.ts
scripts/: diff-context.sh
skills/context-recovery/: SKILL.md
src/: cli.rs  config.rs  demo.rs  events.rs  main.rs  pricing.rs  startup.rs  theme.rs  tokens.rs  util.rs
src/config/: augmentation.rs  features.rs  mod.rs  observability.rs  routing.rs  serialization.rs  startup.rs  tests.rs  transformers.rs
src/logging/: mod.rs
src/parser/: mod.rs  models.rs
src/pipeline/: cortex.rs  cortex_query.rs  embedding_indexer.rs  embeddings.rs  lifestats.rs  lifestats_query.rs  logging.rs  mod.rs  otel.rs
src/pipeline/cortex_query/: fts.rs  hybrid.rs  mod.rs  semantic.rs  sessions.rs  stats.rs  types.rs
src/proxy/: api.rs  count_tokens.rs  error.rs  helpers.rs  interceptor.rs  mod.rs  server.rs  sessions.rs  state.rs
src/proxy/api/: context.rs  cortex.rs  embeddings.rs  events.rs  hooks.rs  mod.rs  search.rs  sessions.rs  stats.rs  whoami.rs
src/proxy/augmentation/: context_warning.rs  mod.rs
src/proxy/handlers/: mod.rs
src/proxy/sse/: mod.rs
src/proxy/transformation/: compact_enhancer.rs  mod.rs  system_editor.rs  system_reminder.rs  tag_editor.rs
src/proxy/transformation/test_data/: compaction_prompt.txt
src/proxy/translation/: context.rs  mod.rs
src/proxy/translation/openai/: request.rs  response.rs  reverse_request.rs  reverse_response.rs
src/storage/: mod.rs
src/theme/: embedded.rs  mod.rs  palette.rs  semantic.rs  toml_format.rs
src/theme/bundled/: ayu_mirage.rs  catppuccin_latte.rs  catppuccin_mocha.rs  dracula.rs  everforest_dark.rs  github_dark.rs  gruvbox_dark.rs  jetbrains_darcula.rs  kanagawa_wave.rs  material_darker.rs  material_deep_ocean.rs  material_forest.rs  material_lighter.rs  material_oceanic.rs  material_palenight.rs  material_sandy_beach.rs  material_sky_blue.rs  material_space.rs  material_volcano.rs  mod.rs  monokai_pro.rs  monokai_pro_machine.rs  monokai_pro_ristretto.rs  monokai_soda.rs  nord.rs  one_half_dark.rs  rose_pine.rs  solarized_light.rs  spy_dark.rs  spy_light.rs  synthwave_84.rs  terminal_ansi.rs  tokyo_night.rs
src/tui/: app.rs  clipboard.rs  input.rs  layout.rs  markdown.rs  mod.rs  modal.rs  preset.rs  scroll.rs  streaming.rs  theme.rs  ui.rs
src/tui/components/: context_bar.rs  detail_panel.rs  events_panel.rs  formatters.rs  logs_panel.rs  mod.rs  models_tab_panel.rs  scrollbar.rs  session_gauges_panel.rs  settings_panel.rs  status_bar.rs  theme_list_panel.rs  thinking_panel.rs  title_bar.rs  toast.rs  tokens_tab_panel.rs  tools_tab_panel.rs  trends_tab_panel.rs
src/tui/traits/: component.rs  copyable.rs  interactive.rs  mod.rs  scrollable.rs
src/tui/views/: events.rs  mod.rs  modal.rs  settings.rs  stats.rs
themes/: Catppuccin_Mocha.toml  Dracula.toml  Monokai_Pro.toml  One_Half_Dark.toml  Solarized_Light.toml
themes/contrib/: 3024_Day.toml  3024_Night.toml  Atom.toml  Atom_One_Dark.toml  Atom_One_Light.toml  Cursor_Dark.toml  GitHub_Light_Colorblind.toml  GitHub_Light_Default.toml  GitHub_Light_High_Contrast.toml  Obsidian.toml
