[package]
name = "anthropic-spy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime - Tokio provides the foundation for async execution
tokio = { version = "1", features = ["full"] }

# HTTP server and client
axum = "0.7"                                                    # Web framework built on hyper (0.8 has breaking changes)
reqwest = { version = "0.12", features = ["json", "stream"] }   # HTTP client - 0.12 aligns http types with axum 0.7

# Async stream utilities
tokio-stream = "0.1"                                           # Stream wrappers for tokio channels
futures = "0.3"                                                 # Stream traits and combinators

# TUI - Terminal User Interface
ratatui = "0.29"                                                # Terminal UI library
crossterm = "0.28"                                              # Cross-platform terminal manipulation

# Serialization - for parsing JSON API responses
serde = { version = "1.0", features = ["derive"] }             # Serialization framework
serde_json = "1.0"                                              # JSON support

# Logging and tracing
tracing = "0.1"                                                 # Application-level tracing
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }  # Log collection

# Error handling
anyhow = "1.0"                                                  # Flexible error handling

# Time handling
chrono = { version = "0.4", features = ["serde"] }             # Date and time utilities

# Cryptography
sha2 = "0.10"                                                   # SHA-256 hashing for API key tracking

# Byte handling
bytes = "1"                                                     # Efficient byte buffer for streaming

# Configuration
dirs = "5"                                                      # Platform-specific config directories
toml = "0.8"                                                    # TOML config file parsing

[[bin]]
name = "anthropic-spy"
path = "src/main.rs"

# Release profile - optimized for distribution
[profile.release]
lto = true              # Link-Time Optimization: better inlining across crates
strip = true            # Remove debug symbols from binary
codegen-units = 1       # Single codegen unit: better optimization, slower compile
panic = "abort"         # No unwinding: smaller binary, faster panics
opt-level = 3           # Maximum optimization level
